Finalize the requirement for a description
Especially:
- Be more lenient for doc patches
- Do not pollute other tests with this feature
- Add a lot more tests